--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-        <h1>Index</h1>
+        <h1>About</h1>
         
     </header>
     <nav>
@@ -16,6 +16,6 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-    <p>This is index page</p>
+    <p>This is about page</p>
     </body>
 </html>
