--- a/blogs.html
+++ b/blogs.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <header>
-        <h1>Index</h1>
+        <h1>Blogs</h1>
         
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="blogs.html">About</a></li>
         </ul>
     </nav>
     <p>This is index page</p>
