--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
         </ul>
     </nav>
     <p>This is about page</p>
