--- a/blogs.html
+++ b/blogs.html
@@ -14,9 +14,9 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="blogs.html">About</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
         </ul>
     </nav>
-    <p>This is index page</p>
+    <p>This is blogs page</p>
     </body>
 </html>
