--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<meta lang="en">
+<html lang="en">
 
-<html>
+
     <head>
-        <title> Test Website</title>
-    </head>
-    <body>
-        <header>
-        <h1>Index</h1>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
-        </ul>
+        <title>Data Science Hub</title>
+
+        <link rel="stylesheet" href="style.css" type="text/css" />
+        <link rel="shortcut icon" href="images/logo.png" />
+    </head>
+
+
+
+    <body>
+
+        <header id="main_header">
+            <div class="header_icon">
+                <img src="images/logo.png" alt="Logo" width="50" height="50"/>
+            </div>
+
+            <div class="header_title">
+                <h1>Welcome to Data Science Hub</h1>
+            </div>
+        </header>
+
+    <nav id="main_nav">
+        <div class="nav_bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blogs.html">Blogs</a></li>
+            </ul>
+        </div>
     </nav>
     <p>This is index page</p>
+
     </body>
+
+
 </html>
