--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="shortcut icon" href="images/logo.png" />
+    
     </head>
 
 
@@ -22,7 +23,7 @@
             </div>
 
             <div class="header_title">
-                <h1>Welcome to Data Science Hub</h1>
+                <h1>Data Science Hub</h1>
             </div>
         </header>
 
@@ -30,12 +31,58 @@
         <div class="nav_bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="blogs.html">Blogs</a></li>
             </ul>
         </div>
     </nav>
-    <p>This is index page</p>
+    <section class="main_content">
+        <div class="body_text">
+            <h1>Welcome</h1>
+            <p>
+                <center>Welcome to Data Science Hub! </center><br/>
+                This website is designed to support aspiring data scientists by sharing the subject knowledge
+                 and industry experience. I aim to upload projects and add blogs related to Data Science, 
+                 Data Analysis, Machine Learning, Deep Learning (Neural Network), Natural Language Processing,
+                Python, and Python packages related to Data Science. <br/>
+                <br/>
+                <center>If you happen to have interest in any of these above-mentioned areas, feel free to explore this site!!</center>
+            </p>
+        </div>
+    </section>
+    <hr>
+    <section id="about">
+        <div class="body_text">
+            <h1>About me</h1>
+        </div>
+        <div class="profile">
+            <div class="profile_photo">
+                <img src="images/profile_photo.jpeg" alt="Profile Photo" width="250" height="250"/>
+            </div>
+            <div class="profile_text">
+                <p>
+                    Hello, I'm Rajpal Virk! &#128075. <br/>
+                    I am a Data Scientist with interests in Data Analysis, Machine Learning, Deep Learning and Artificial Intelligence.
+                    <br/><br/>
+                    I have over 12 years of experience working in auto-industry and heavy construction equipment/machine manufacturing industry.
+                    During this period, I have handled various positions such as Design Engineer, Project Engineer, Sales Executive, Data Analyst, 
+                    Data Scientist, Software Engineer, Machine Learning/Deep Learning Engineer, Project Manager etc. and had opportunity to work in 
+                    the United Kingdom, China, India, Canada and the United States.<br/><br/><br/>
+                </p>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+
+    <footer id="main_footer">
+        <div class="footer_icon">
+
+        </div>
+        <div class="footer_text">
+            <p>copyright &copy; 2019 Data Science Hub | Rajpal Virk</p>
+        </div>
+    </footer>
 
     </body>
 
