--- a/index.html
+++ b/index.html
@@ -72,7 +72,79 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="software">
+            <div class="body_text">
+                <h2>Software Skills</h2>
+            </div>
+        </div>
+        <div class="software_logo">
+            <div class="row">
+                <div class="column">
+                    <img src="images/python.png" alt="Python" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pandas.png" alt="Pandas" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/numpy.png" alt="Numpy" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pytorch.jpeg" alt="PyTorch" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/scikit.png" alt="Scikit-Learn" style="width:100%">
+                </div>
+                <div class="column-row">
+                    <img src="images/tensorflow.png" alt="Tensorflow" style="width:100%">
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <img src="images/keras.png" alt="Keras" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/scipy.png" alt="Scipy" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/Rlogo.png" alt="Rlogo" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/tableau.jpg" alt="Tableau" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/sql.jpg" alt="SQl" style="width:100%">
+                </div>
+                <div class="column-row">
+                    <img src="images/docker.png" alt="Docker" style="width:100%">
+                </div>
+            </div>
+            <div class="row-end">
+                <div class="column">
+                    <img src="images/domino.png" alt="Domino" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/datarobot.png" alt="Datarobot" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/seldon.jpg" alt="Seldon" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/powerbi.png" alt="PowerBI" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/jenkins.jpeg" alt="Jenkins" style="width:100%">
+                </div>
+                <div class="column-row">
+                    <img src="images/kubernetes.png" alt="Kubernetes" style="width:100%">
+                </div>
+            </div>
+        </div>
+    </section>
     <hr>
+    <section id="contact">
+        <div class="contact_"></div>
+    </section>
 
 
     <footer id="main_footer">
