--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="column">
                     <img src="images/scikit.png" alt="Scikit-Learn" style="width:100%">
                 </div>
-                <div class="column-row">
+                <div class="column">
                     <img src="images/tensorflow.png" alt="Tensorflow" style="width:100%">
                 </div>
             </div>
@@ -115,11 +115,11 @@
                 <div class="column">
                     <img src="images/sql.jpg" alt="SQl" style="width:100%">
                 </div>
-                <div class="column-row">
+                <div class="column">
                     <img src="images/docker.png" alt="Docker" style="width:100%">
                 </div>
             </div>
-            <div class="row-end">
+            <div class="row">
                 <div class="column">
                     <img src="images/domino.png" alt="Domino" style="width:100%">
                 </div>
@@ -135,7 +135,7 @@
                 <div class="column">
                     <img src="images/jenkins.jpeg" alt="Jenkins" style="width:100%">
                 </div>
-                <div class="column-row">
+                <div class="column">
                     <img src="images/kubernetes.png" alt="Kubernetes" style="width:100%">
                 </div>
             </div>
